[build-system]
requires = ["setuptools >= 75.8"]
build-backend = "setuptools.build_meta"

[project]
name = "agents"
version = "0.1.0"
description = "Agentic tool using LangGraph"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "EeHeng Chen", email = "eeheng.chen@gmail.com" }]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
optional-dependencies = { dev = { file = ["requirements-dev.txt"] } }

[tool.black]
line-length = 80
target-version = ["py310"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]

[[tool.mypy.overrides]]
module = ["untyped_package.*"]
follow_untyped_imports = true
